--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -18,7 +18,7 @@
 
       <input class="menu-input" type="checkbox" id="menu{{idea.pk}}">
       <label for="menu{{idea.pk}}">
-      <i class="fas fa-ellipsis-h"></i>
+      <i class="fas fa-bars"></i>
       </label>
 
             <div class="options-content">
