filter bar phase names fix

--- a/ideax/templates/ideax/idea_list.html
+++ b/ideax/templates/ideax/idea_list.html
@@ -4,11 +4,13 @@
     <nav class="phase-filter">
       <ul class="phase-list">
         <li class="active"><a href="#">Todas</a></li>
-        <li><a href="#">Crescendo</a></li>
-        <li><a href="#">Avaliando</a></li>
-        <li><a href="#">Agindo</a></li>
+        <li><a href="#">Discussão</a></li>
+        <li><a href="#">Avaliação</a></li>
+        <li><a href="#">Aprovação</a></li>
+        <li><a href="#">Desenvolvimento</a></li>
         <li><a href="#">Feitas</a></li>
         <li><a href="#">Arquivadas</a></li>
+        
       </ul>
     </nav>
     <div id="idea-list">
