--- a/ideax/templates/ideax/includes/partial_idea_remove.html
+++ b/ideax/templates/ideax/includes/partial_idea_remove.html
@@ -7,7 +7,7 @@
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Confirmar deleção de Ideia</h4>
+    <h4 class="modal-title">Confirmar descarte de Ideia</h4>
   </div>
 
 
@@ -18,6 +18,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-    <button type="submit" class="btn btn-primary">Deletar</button>
+    <button type="submit" class="btn btn-primary">Descartar</button>
   </div>
 </form>
