--- a/ideax/templates/ideax/category_edit.html
+++ b/ideax/templates/ideax/category_edit.html
@@ -1,13 +1,13 @@
-{% load widget_tweaks %}
+{% load widget_tweaks i18n %}
 
 
 
-    <h1>Nova Categoria</h1>
+    <h1>{% trans 'New Category' %}</h1>
 
     <form method="post" class="post-form" action="{% url 'category_new' %}">
       {% csrf_token %}
       {% include 'ideax/includes/base_form.html' %}
       <button type="submit" class="btn btn-primary">
-        <span class="glyphicon glyphicon-ok"></span> Salvar
+        <span class="glyphicon glyphicon-ok"></span> {% trans 'Save' %}
       </button>
     </form>
