--- a/ideax/templates/ideax/idea_detail.html
+++ b/ideax/templates/ideax/idea_detail.html
@@ -1,4 +1,5 @@
 {% extends 'ideax/base.html' %}
+{% load i18n %}
 
 {% block content %}
     <div class="post">
@@ -8,12 +9,12 @@
           </div>
         {% else %}
           {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'idea_publish' pk=idea.pk %}" title="Publish"><span class="glyphicon glyphicon-saved"></span></a>
+            <a class="btn btn-default" href="{% url 'idea_publish' pk=idea.pk %}" title="{% trans 'Publish'%}"><span class="glyphicon glyphicon-saved"></span></a>
           {% endif %}
         {% endif %}
         {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'idea_edit' pk=idea.pk %}" title="Edit"><span class="glyphicon glyphicon-pencil"></span></a>
-          <a class="btn btn-default" href="{% url 'idea_remove' pk=idea.pk %}" title="Remove"><span class="glyphicon glyphicon-remove"></span></a>
+          <a class="btn btn-default" href="{% url 'idea_edit' pk=idea.pk %}" title="{% trans 'Edit'%}"><span class="glyphicon glyphicon-pencil"></span></a>
+          <a class="btn btn-default" href="{% url 'idea_remove' pk=idea.pk %}" title="{% trans 'Remove'%}"><span class="glyphicon glyphicon-remove"></span></a>
         {% endif %}
         <h1>{{ idea.title }}</h1>
         <p>{{ idea.description|linebreaksbr }}</p>
