--- a/ideax/templates/ideax/idea_edit.html
+++ b/ideax/templates/ideax/idea_edit.html
@@ -1,9 +1,9 @@
 {% extends 'ideax/base.html' %}
-{% load widget_tweaks %}
+{% load widget_tweaks i18n %}
 
 
 {% block content %}
-    <h1>Nova ideia</h1>
+    <h1>{% trans 'New Idea' %}</h1>
 
     <form method="post" class="post-form">
       {% csrf_token %}
@@ -18,7 +18,7 @@
       {% endfor %}
       <div class="form-group">
         <button type="submit" class="btn btn-primary">
-          <span class="glyphicon glyphicon-ok"></span> Salvar
+          <span class="glyphicon glyphicon-ok"></span> {% trans 'Save' %}
         </button>
 
       </div>
