--- a/ideax/templates/ideax/includes/partial_idea_create.html
+++ b/ideax/templates/ideax/includes/partial_idea_create.html
@@ -1,4 +1,4 @@
-{% load widget_tweaks %}
+{% load widget_tweaks i18n %}
 
 <form method="post" class="post-form js-idea-create-form" action="{% url 'idea_new' %}">
   {% csrf_token %}
@@ -7,7 +7,7 @@
     <div class="modal-title">
       <span><i class="far fa-lightbulb"></i></span>
 
-      <h4>Criar Ideia</h4>
+      <h4>{% trans 'Create Idea' %}</h4>
     </div>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
@@ -22,6 +22,6 @@
   </div>
   <div class="modal-footer">
     <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button> -->
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
   </div>
 </form>
