--- a/ideax/templates/ideax/includes/partial_idea_remove.html
+++ b/ideax/templates/ideax/includes/partial_idea_remove.html
@@ -1,4 +1,4 @@
-{% load widget_tweaks %}
+{% load widget_tweaks i18n %}
 
 <form method="post" class="post-form js-idea-remove-form" action="{% url 'idea_remove' idea.id %}">
   {% csrf_token %}
@@ -7,17 +7,17 @@
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Confirmar descarte de Ideia</h4>
+    <h4 class="modal-title">{% trans 'Confirm ideia removal' %}</h4>
   </div>
 
 
   <div class="modal-body">
     <p class="lead">
-      Deseja apagar a ideia <strong>{{idea.title}}</strong>
+      {% trans 'Would you like to delete the idea?' %} <strong>{{idea.title}}</strong> ?
     </p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-    <button type="submit" class="btn btn-primary">Descartar</button>
+    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans 'Close' %}</button>
+    <button type="submit" class="btn btn-primary">{% trans 'Discard' %}</button>
   </div>
 </form>
