--- a/ideax/templates/ideax/index.html
+++ b/ideax/templates/ideax/index.html
@@ -1,43 +1,35 @@
 {% extends 'ideax/base.html' %}
-{% load staticfiles %}
+{% load staticfiles i18n %}
 
 {% block content %}
     <div class="brief-explanation">
-      <h1>Ideia X compartilhando ideias!</h1>
-      <p>Com o Ideia X você tem um canal aberto para a inovação, recebendo ideias de todas as partes, avaliando e fazendo-as acontecer!</p>
+      <h1>{% trans 'brief-explanation-title' %}</h1>
+      <p>{% trans 'brief-explanation-description' %}</p>
     </div>
     <div class="idea-launch">
       <div class="launch-text">
-        <h2>Lance suas ideias para todos!</h2>
-        <p>O Ideia X é o canal para divulgar e compartilhar suas ideias, permitindo
-          que seus pares possam contribuir, discutir e colaborar para o
-          crescimento dela.</p>
-        <p>Da mesma forma, você pode ver as outras ideias postadas, interagindo
-          com sua opinião, perguntando e opinando para melhorar ainda mais
-          outras ideias.</p>
+        <h2>{% trans 'launch-text-title' %}</h2>
+        <p>{% trans 'brief-explanation-p-1' %}</p>
+        <p>{% trans 'brief-explanation-p-2' %}</p>
       </div>
       <img src="{% static 'images/idea_launch.png' %}" alt="">
     </div>
     <div class="functionality">
       <div class="function-list">
-        <h2>Funcionalidades</h2>
+        <h2>{% trans 'Features' %}</h2>
         <div class="function-item">
-          <h3>Cadastro de ideias</h3>
-          <p>Todos dentro da empresa ou projeto podem colaborar. A inovação
-  poderá vir de todos.</p>
+          <h3>{% trans 'Register Ideas' %}</h3>
+          <p>{% trans 'Register Ideas-p' %}</p>
         </div>
 
         <div class="function-item">
-          <h3>Gestão de ideias</h3>
-          <p>As ideias podem ser organizadas, amadurecidas e avaliadas,
-  permitindo um fluxo para a gestão da inovação.</p>
+          <h3>{% trans 'Manage Ideas' %}</h3>
+          <p>{% trans 'Manage Ideas-p' %}</p>
         </div>
 
         <div class="function-item">
-          <h3>Integração com outras ferramentas</h3>
-          <p>Através das APIs é possível integrar com outras ferramentas.
-  Integrando com uma ferramenta de gestão de projetos é possível criar
-  um projeto a partir de uma ideia cadastrada no Ideia X.</p>
+          <h3>{% trans 'Intagration with other systems' %}</h3>
+          <p>{% trans 'Intagration with other systems-p' %}</p>
         </div>
       </div>
     </div>
