--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -16,8 +16,8 @@
     </p>
     <div class="idea-options">
 
-      <input class="menu-input" type="checkbox" id="menu{{idea.pk}}">
-      <label for="menu{{idea.pk}}">
+      <input class="menu-input" type="checkbox" id="menu{{idea.pk}}{% if link_title == False %}{{idea.pk}}{% endif%}">
+      <label for="menu{{idea.pk}}{% if link_title == False %}{{idea.pk}}{% endif%}">
       <i class="fas fa-bars"></i>
       </label>
 
