--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -273,14 +273,14 @@ div.idea{
   box-shadow: 0 .28571429rem 1.42857143rem rgba(79,79,79,.1);
   border: 1px solid #E5E5E5;   */
   display: flex;
-flex-flow: column;
+  flex-flow: column;
   justify-content: center;
   border-radius: 14px;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   margin: 0 0 50px 0;
   padding: 10px 15px;
-  background: #fafafa;
+  background: #fbfbfb;
   width: 525px;
   min-height: 300px;
   position: relative;
@@ -299,6 +299,7 @@ flex-flow: column;
   border-bottom: 1px solid #E1E1E1;
   padding-bottom: 15px;
   height: 50px;
+  padding-top: 5px;
 }
 
 .idea-header h1{
@@ -306,10 +307,9 @@ flex-flow: column;
   font-size: 1.6em;
 }
 
-.idea-header h1,
-.idea-header p{
+h1.idea-title{
   margin: 0;
-
+  color: #000;
 }
 
 .idea-header p{
@@ -321,14 +321,12 @@ flex-flow: column;
   font-weight: 100;
   display: flex;
   flex-direction: column;
-  //position: absolute;
   overflow: hidden;
   align-self: flex-start;
-
-  padding-top: 0px;
+  padding-top: 7px;
+  width: 30px;
+  overflow: visible;
 }
-
-
 
 .idea-options ul{
   list-style-type: none;
@@ -346,7 +344,6 @@ flex-flow: column;
   text-decoration: none !important;
   font-size: 0.6em;
   padding: 10px;
-
 }
 
 .idea-options label{
@@ -445,10 +442,15 @@ input.menu-input{
 
 .idea-desc{
   text-align: left;
-  margin-top: 20px;
-  padding: 0 20px;
+  /*margin-top: 20px;*/
+  padding: 10px 10px 0px 10px;
   font-size: 0.9em;
+  color: #524b4b;
+}
 
+.idea-desc p:first-child {
+    height: 180px;
+    overflow: initial;
 }
 
 .bold{
@@ -468,15 +470,11 @@ input.menu-input{
   border-top: 1px solid #E1E1E1;
   /*! max-width: 524px; */
   padding: 20px 0 5px 0;
-
-
-
   max-height: 40px;
 }
 
 .idea-footer p{
   margin-bottom: 0;
-
 }
 
 .idea-footer .button-group button{
@@ -576,7 +574,6 @@ input.menu-input{
 
 .like-menu p{
   display: inline;
-
   margin-bottom: 0;
   margin-left: -3px;
   font-size: 1.15em;
@@ -607,6 +604,12 @@ input.menu-input{
 .disliked a{
   margin-left: 5px;
   color: #FF040099;
+}
+
+.idea-date {
+    text-align: right;
+    color: #000;
+    margin-bottom: 5px;
 }
 
 /*Footer*/
