--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -98,11 +98,11 @@ div.login{
   z-index: 50;
   background: white;
 border-bottom: 1px solid #E1E1E1;
-height: 60px !important;
+height: 80px !important;
 }
 
 .fixed ~ #idea-list{
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 nav.phase-filter {
@@ -279,17 +279,17 @@ flex-flow: column;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   margin: 0 0 50px 0;
-  padding: 10px 15px;
+  padding: 0 15px 10px 15px;
   background: #fafafa;
   width: 525px;
-  min-height: 300px;
+  height: 300px;
   position: relative;
   border: 1px solid #E1E1E1;
    box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
   -webkit-box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
   -moz-box-shadow: 2px 2px 3px 0 rgba(117, 124, 129, 0.12);
-
-  justify-content: space-around;
+  justify-content: space-between;
+  //z-index: 0;
 }
 
 .idea-header{
@@ -297,13 +297,17 @@ flex-flow: column;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #E1E1E1;
-  padding-bottom: 15px;
-  height: 50px;
+  //padding-bottom: 15px;
+  min-height: 45px;
+  height: 45px;
 }
 
+
+
 .idea-header h1{
-  cursor: pointer;
-  font-size: 1.6em;
+  //cursor: pointer;
+  font-size: 0.9em;
+  z-index: 1;
 }
 
 .idea-header h1,
@@ -312,8 +316,24 @@ flex-flow: column;
 
 }
 
-.idea-header p{
-  font-size: 0.9em;
+.idea-header .date{
+  font-size: 0.8em;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.idea-header .info-icon{
+  font-size: 1.5em;
+  color: #1c2d5a;
+  position: absolute;
+  right: 50px;
+  top: 9px;
+  cursor: pointer;
+}
+
+.no-link{
+  cursor: default !important;
 }
 
 .idea-options{
@@ -321,11 +341,10 @@ flex-flow: column;
   font-weight: 100;
   display: flex;
   flex-direction: column;
-  //position: absolute;
   overflow: hidden;
   align-self: flex-start;
-
-  padding-top: 0px;
+  //z-index: 1;
+  padding-top: 10px;
 }
 
 
@@ -354,6 +373,10 @@ flex-flow: column;
   cursor: pointer;
   //padding: 30px 0 30px 80px;
   margin-bottom: 0;
+  width: 30px;
+  align-self: flex-end;
+  font-size: 0.8em;
+  z-index: 4;
 
 }
 
@@ -364,7 +387,7 @@ input.menu-input{
 .idea-options input:checked ~ .options-content{
   max-height: 100%;
   border: 1px solid #E1E1E1;
-  margin-top: 5px;
+  //margin-top: 5px;
 }
 
 .options-content{
@@ -375,8 +398,9 @@ input.menu-input{
   width: 145px;
   border-left: 1px solid #E1E1E1;
   border-right: 1px solid #E1E1E1;
-  z-index: 50;
+  z-index: 5;
   box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+
 }
 
 .options-content a{
@@ -443,15 +467,21 @@ input.menu-input{
 
 /*idea card body*/
 
-.idea-desc{
+.idea-body{
   text-align: left;
-  margin-top: 20px;
   padding: 0 20px;
   font-size: 0.9em;
-
+  overflow-y: auto;
+  padding: 10px 20px;
+  min-height: 200px;
 }
 
 .bold{
+  font-weight: bold;
+}
+
+.idea-title{
+  font-size: 1.1em;
   font-weight: bold;
 }
 
@@ -467,7 +497,7 @@ input.menu-input{
   width: 100%;
   border-top: 1px solid #E1E1E1;
   /*! max-width: 524px; */
-  padding: 20px 0 5px 0;
+  padding: 15px 0 5px 0;
 
 
 
