--- a/ideax/templates/ideax/idea_list.html
+++ b/ideax/templates/ideax/idea_list.html
@@ -10,11 +10,14 @@
         <li><a href="#">Desenvolvimento</a></li>
         <li><a href="#">Feitas</a></li>
         <li><a href="#">Arquivadas</a></li>
-        
+
       </ul>
     </nav>
     <div id="idea-list">
-      {% include 'ideax/idea_list_loop.html' %}
+      {% for idea in ideas %}
+          {% include 'ideax/includes/idea_detail.html' %}
+      {% endfor %}
+
     </div>
 
     <div class="modal fade" id="modal-idea">
