--- a/ideax/templates/ideax/category_list.html
+++ b/ideax/templates/ideax/category_list.html
@@ -1,47 +1,16 @@
 {% extends 'ideax/base.html' %}
+{% load staticfiles i18n %}
 
 {% block content %}
-    <div id="category-list">
 
-      <button type="button" class="btn btn-primary js-create-category" data-url="{% url 'open_category_new' %}">
-        <span class="glyphicon glyphicon-plus"></span>
-        Nova Categoria
-      </button>
+  <button type="button" class="btn btn-primary js-create-category" data-modal="#modal-category-crud" data-url="{% url 'open_category_new' %}">
+    <span class="glyphicon glyphicon-plus"></span>
+    {% trans 'New Category' %}
+  </button>
 
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Descrição</th>
-            <th>Palavra-chave</th>
-            <th>Editar</th>
-            <th>Apagar</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for category in category_list %}
-            <tr>
-              <td>{{category.description}}</td>
-              <td>{{category.key_word}}</td>
-              <td><i class="far fa-edit"></i></td>
-              <td><i class="far fa-trash-alt"></i></td>
-            </tr>
-          {% endfor %}
-      </tbody>
-      </table>
-    </div>
+  <div id="category-list">
+    {% include 'ideax/includes/partial_category_list.html' %}
+  </div>
 
-    <div class="modal fade" id="modal-idea">
-      <div class="modal-dialog">
-        <div class="modal-content">
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="modal-idea-crud">
-      <div class="modal-dialog">
-        <div class="modal-content">
-        </div>
-      </div>
-    </div>
-
+  {% include 'ideax/includes/modals.html' %}
 {% endblock %}
