--- a/ideax/templates/ideax/includes/partial_idea_create.html
+++ b/ideax/templates/ideax/includes/partial_idea_create.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks i18n %}
 
-<form method="post" class="post-form js-idea-create-form" action="{% url 'idea_new' %}">
+<form method="post" class="post-form js-idea-create-form" action="{% url 'idea_new' %}" data-modal="#modal-idea-crud" data-list-div="#idea-list">
   {% csrf_token %}
 
   <div class="modal-header">
