--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -119,10 +119,10 @@ ul.phase-list {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  font-size: 0.75em;
 }
 
 ul.phase-list li {
-
   float: left;
   margin-right: 0px;
   border-right: 1px solid #aaa;
@@ -136,7 +136,7 @@ ul.phase-list li:last-child {
 ul.phase-list li a {
   text-decoration: none;
   color: #ccc;
-
+  outline: none;
   font-family:'Open Sans', sans-serif;
   font-size: 1.2em;
   text-transform: uppercase;
@@ -155,6 +155,12 @@ ul.phase-list li a:hover {
 ul.phase-list li.active a {
   font-weight: bold;
   color: #333;
+}
+
+.empty{
+  display: block;
+  margin: 30px auto 0 auto;
+  font-size: 1.8em;
 }
 
 /*Login*/
