--- a/ideax/templates/ideax/includes/idea_detail.html
+++ b/ideax/templates/ideax/includes/idea_detail.html
@@ -1,4 +1,4 @@
-{% load widget_tweaks i18n %}
+<!-- {% load widget_tweaks i18n %} -->
 
 <div class="idea {{idea.get_current_phase.css_class}}">
   <!-- idea card header -->
