Adjusts some strings for l10n

--- a/ideax/templates/ideax/index.html
+++ b/ideax/templates/ideax/index.html
@@ -3,14 +3,14 @@
 
 {% block content %}
     <div class="brief-explanation">
-      <h1>{% trans 'brief-explanation-title' %}</h1>
-      <p>{% trans 'brief-explanation-description' %}</p>
+      <h1>{% trans 'Idea X sharing ideas!' %}</h1>
+      <p>{% trans 'With Ideia X you have an open channel for innovation, getting ideas from all parties, evaluating and making them happen!' %}</p>
     </div>
     <div class="idea-launch">
       <div class="launch-text">
-        <h2>{% trans 'launch-text-title' %}</h2>
-        <p>{% trans 'brief-explanation-p-1' %}</p>
-        <p>{% trans 'brief-explanation-p-2' %}</p>
+        <h2>{% trans 'Launch your ideas for everyone!' %}</h2>
+        <p>{% trans 'Ideia X is the channel to spread and share your ideas, allowing your peers to contribute, discuss and collaborate to grow it.' %}</p>
+        <p>{% trans 'In the same way, you can see other posted ideas, interacting with your opinion, asking and opining to further improve other ideas.' %}</p>
       </div>
       <img src="{% static 'images/idea_launch.png' %}" alt="">
     </div>
@@ -19,17 +19,17 @@
         <h2>{% trans 'Features' %}</h2>
         <div class="function-item">
           <h3>{% trans 'Register Ideas' %}</h3>
-          <p>{% trans 'Register Ideas-p' %}</p>
+          <p>{% trans 'Everyone within the company or project can collaborate. Innovation can come from everyone.' %}</p>
         </div>
 
         <div class="function-item">
           <h3>{% trans 'Manage Ideas' %}</h3>
-          <p>{% trans 'Manage Ideas-p' %}</p>
+          <p>{% trans 'Ideas can be organized, matured and evaluated, allowing a flow for the innovation management.' %}</p>
         </div>
 
         <div class="function-item">
-          <h3>{% trans 'Intagration with other systems' %}</h3>
-          <p>{% trans 'Intagration with other systems-p' %}</p>
+          <h3>{% trans 'Integration with other systems' %}</h3>
+          <p>{% trans 'Through APIs is possible to integrate with other tools. Integrating with a project management tool is possible to create a project based on an idea registered in Idea X.' %}</p>
         </div>
       </div>
     </div>
