--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -991,3 +991,10 @@ padding: 8% 15% 0 15%;
 .activeVote {
   font-weight: bold;
 }
+
+.media-left {
+  width: 15px;
+  display: table-cell;
+  vertical-align: top;
+  padding-right: 10px;
+}
