add idea detail with comments area

--- a/ideax/static/css/blog.css
+++ b/ideax/static/css/blog.css
@@ -805,7 +805,7 @@ input#id_title {
 
 #idea-tab{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .tab-content{
