--- a/ideax/templates/ideax/idea_detail.html
+++ b/ideax/templates/ideax/idea_detail.html
@@ -2,21 +2,39 @@
 {% load i18n %}
 
 {% block content %}
-    <div class="post">
-        {% if idea.creation_date %}
-          <div class="date">
-            {{ idea.creation_date }}
-          </div>
-        {% else %}
-          {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'idea_publish' pk=idea.pk %}" title="{% trans 'Publish'%}"><span class="glyphicon glyphicon-saved"></span></a>
-          {% endif %}
-        {% endif %}
-        {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'idea_edit' pk=idea.pk %}" title="{% trans 'Edit'%}"><span class="glyphicon glyphicon-pencil"></span></a>
-          <a class="btn btn-default" href="{% url 'idea_remove' pk=idea.pk %}" title="{% trans 'Remove'%}"><span class="glyphicon glyphicon-remove"></span></a>
-        {% endif %}
-        <h1>{{ idea.title }}</h1>
-        <p>{{ idea.description|linebreaksbr }}</p>
+  <div class="idea-desc-title">
+      <h2 class="desc-title">
+        {{ idea.title }}
+      </h2>
+      <p class="author">Por {{ idea.author.get_full_name }}</p>
+  </div>
+  <div class="idea-page">
+    <div class="idea-desc">
+      {{ idea.description|linebreaksbr }}
     </div>
+    <div class="separator"></div>
+
+    <div class="idea-interaction">
+      <ul class="nav nav-tabs" id="idea-tab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="comments-area-tab" data-toggle="tab" href="#comments-area" role="tab" aria-controls="comments-area" aria-selected="true">Comentários</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="evaluation-tab" data-toggle="tab" href="#evaluation" role="tab" aria-controls="evaluation" aria-selected="false">Avaliação</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Histórico</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        {% include 'ideax/includes/partial_comments.html' %}
+        <div class="tab-pane fade" id="evaluation" role="tabpanel" aria-labelledby="evaluation-tab">Avaliação</div>
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Contact</div>
+      </div>
+    </div>
+
+  </div>
+
+
+
 {% endblock %}
