--- a/ideax/templates/ideax/includes/partial_comments.html
+++ b/ideax/templates/ideax/includes/partial_comments.html
@@ -1,25 +1,29 @@
 {% load mptt_tags %}
 {% load widget_tweaks i18n %}
 
-<div id="comments-area" class="comments">
+<div id="comments-area" class="tab-pane fade show active comments" role="tabpanel" aria-labelledby="comment-group-tab">
   {% recursetree comments %}
-  <div class="media">
+  <div class="media comment">
     <div class="media-left">
     </div>
-    <div class="comment-header">
-      <p>{{ node.author.username }} - {{ node.date|date:"d/m/Y h:m"}}</p>
-    </div>
     <div class="media-body">
-      {{ node.raw_comment|safe }}
-      <div class="reply-container">
+      <div class="mt-0 comment-header">
+        <span class="c-author">{{ node.author.username }}</span>
+        <span class="c-date">{{ node.date|date:"d/m/Y h:m"}}</span>
+      </div>
+      <div class="comment-body">
+        {{ node.raw_comment|safe }}
+      </div>
+      <div class="reply-link reply-container">
         <a href="javascript:void(0)" data-idea-id="{{idea_id}}" data-parent-id="{{ node.id }}" name="replyButton">reply</a>
       </div>
       {% if not node.is_leaf_node %}
-        <div class="reply">
-          {{ children }}
-        </div>
+      <div class="reply">
+        {{ children }}
+      </div>
       {% endif %}
+
     </div>
-  </div>
+    </div>
   {% endrecursetree %}
-</div>
+  </div>
