landing page login button fix

--- a/ideax/templates/ideax/base.html
+++ b/ideax/templates/ideax/base.html
@@ -32,7 +32,7 @@
         </div>
         {% else %}
         <div class="login">
-          <a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i></a>
+          <a href="{% url 'login' %}">Login</i></a>
         </div>
 
         {% endif %}
